# rust202306

./: .gitignore  Readme.md
01-Basics/: hello.rs
02-structures/src/: main.rs
03-structures/src/: main.rs
04-cities/src/: main.rs
05-cities-module/src/: city.rs  main.rs
05-cities-module/src/city/: output.rs
06-geometry/src/: geo.rs  main.rs  tests.rs
06-geometry/src/geo/: circle.rs  mesurable2d.rs  point.rs  triangle.rs
06-geometry/src/tests/: geo.rs
06-geometry/src/tests/geo/: circle.rs  point.rs  triangle.rs
07-misc/src/: main.rs
08-collections/src/: main.rs
10-cties-app/: Cargo.toml
10-cties-app/src/: main.rs
11-async/: Cargo.toml
11-async/src/: main.rs
